src/test/resources/tests/run-pass/codegen/int-not.rs
fn main() {
    if !false {
        println(!0);
    }

    if !true {
        println(0);
    }
}