src/test/resources/tests/compile-fail/semck/break-after-while.rs
fn main() {
    while true {

    }

    break; //! ERROR(6:5): `break` outside of loop
}